# dmg

./: .env.example  .gitignore  .swiftformat  .swiftlint.yml  AUTO_UPDATE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_ja.md  README_ko.md  README_zh-TW.md  README_zh.md  SECURITY.md  build-tauri.bat  feishu-notify.js  index.html  justfile  package-lock.json  package.json  run-tests.sh  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  gitclone.yml
MoleUI/: Info.plist
MoleUI.xcodeproj/: project.pbxproj
MoleUI/Model/: CLIExecutor.swift  CleanModel.swift  DiskModel.swift  ErrorTranslator.swift  InstallerModel.swift  MetricsModel.swift  (+6 more)
MoleUITests/: MoleCoreTests.swift  UIFlowTests.swift
src/: cli.js  config.js  default-config.js  engine.js  env-setup.js  format.js  hook-context.js  hook-reminder.js  hooks-stdin.js  hooks.js  paths.js  state.js  summary.js  watch-log.js  watch.js
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-ui/: App.tsx  main.tsx
tests/: config-summary-timeout.test.js  engine-summary-diagnostics.test.js  env-setup.test.js  macos-native-notification.test.js  sound-mac.test.js  summary-test-cli.test.js  summary-ui-copy.test.js  tray-hide-source.test.js  watch-codex-multi-session.test.js  watch-codex-tui-failure.test.js  webhook-feishu-card.test.js  webhook-output-options.test.js
tools/: build-sidecar.js  dist.js  generate-icons.py  pack-tauri-portable.js  run-tauri-build.js
(+41 files in other folders)
