[package]
name = "ai-cli-complete-notify"
version = "2.8.0"
description = "AI CLI task completion notification tool"
authors = [""]
edition = "2021"

[lib]
name = "ai_cli_complete_notify_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2.4.0"
tauri-plugin-notification = "2.3.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
